<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
 	 >

    <LinearLayout
        android:id="@+id/bind_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/activity_bg_color"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_discription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/machine_sycn_discribtion"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/setting_item_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/search_order_no"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/setting_item_text_size" />

            <EditText
                android:id="@+id/order_num_et"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:hint="@string/device_code_edittext_hint"
                android:singleLine="true"
                 />
            <!-- android:text="600180527223722" -->
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/search_pro_no"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/setting_item_text_size" />
            
            <EditText
                android:id="@+id/pro_no_et"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:hint="@string/device_pro_code_edittext_hint"
                android:singleLine="true"
                 />
            <!-- android:text="4498c060-59ac-44c2-9566-4a5374d17bdb" -->
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_sycn_replace_filter"
                android:textColor="@color/tds_text_color"
                android:layout_centerVertical="true"
                android:textSize="@dimen/setting_item_text_size" />
            
            <CheckBox
                android:id="@+id/my_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        
        <Button
            android:id="@+id/get_device_code_bt"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:layout_marginRight="@dimen/margin_20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_background_shape"
            android:text="@string/device_code_button_hint"
            android:textColor="@drawable/button_text_select"
            android:textSize="@dimen/text_size_24sp" />
    </LinearLayout>
    
   

</RelativeLayout>