<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="260dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:src="@drawable/ic_dialog_info" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:text="@string/wifi_dialog_title"
            android:textColor="@color/navigation_bar_color"
            android:textSize="@dimen/text_size_22sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/navigation_bar_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_weight="1"
            android:text="@string/wifi_dialog_name"
            android:textColor="@color/navigation_bar_color"
            android:textSize="@dimen/text_size_22sp" />

        <TextView
            android:id="@+id/wifi_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_weight="6"
            android:text="TextView"
            android:textColor="@color/navigation_bar_color"
            android:textSize="@dimen/text_size_22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_weight="1"
            android:text="@string/wifi_manage_pwd"
            android:textColor="@color/navigation_bar_color"
            android:textSize="@dimen/text_size_22sp" />

        <EditText
            android:id="@+id/wifi_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="40dp"
            android:layout_weight="5.3"
            android:password="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_weight="6"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/show_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_manage_shwo_pwd"
                android:textColor="@color/navigation_bar_color"
                android:textSize="@dimen/text_size_22sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/navigation_bar_color"
            android:textSize="@dimen/text_size_22sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/line_color" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/navigation_bar_color"
            android:textSize="@dimen/text_size_22sp" />
    </LinearLayout>

</LinearLayout>