<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical" 
    >

    <LinearLayout
        android:id="@+id/progress_ll"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progress"
            style="@style/progresStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/hit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/device_binding"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/network_disconnect_ll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
             android:id="@+id/loading_failed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_disconnected"
            android:textColor="#555555"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_size_26sp" />

        <Button
            android:id="@+id/refresh_data_bt"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_background_shape"
            android:text="@string/refresh_data"
            android:textColor="@drawable/button_text_select"
            android:textSize="@dimen/text_size_24sp" />
    </LinearLayout>

</LinearLayout>