<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bind_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/activity_bg_color"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/equipment_change_text_hint"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/setting_item_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/equipment_no_et"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:hint="@string/equipment_change_edittext_hint"
                 />
        </LinearLayout>

        <Button
            android:id="@+id/equipment_change_bt"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:layout_marginRight="@dimen/margin_20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_background_shape"
            android:text="@string/confirm"
            android:textColor="@drawable/button_text_select"
            android:textSize="@dimen/text_size_24sp" />
    </LinearLayout>

</LinearLayout>